--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,60 @@
     <link rel="shortcut icon" href="/src/assets/favicon/icon.ico" type="image/x-icon">
     <title>Atlantida</title>
 </head>
+
 <body>
-    <h1>Hello !!!</h1>
+
+    <div class="slider">
+        <header> 
+            <div class="container">
+                <div class="header"> 
+                    <div class="header__logo">
+                        <img src="assets/images/logo_header.png" alt="Logo">
+                    </div>
+                    <div class="header__nav">
+                        <ul>
+                            <li>
+                                <a href="/">Home</a>
+                            </li>
+                            <li>
+                                <a href="/">About</a>
+                            </li>
+                            <li>
+                                <a href="/">History</a>
+                            </li>
+                            <li>
+                                <a href="/">Team</a>
+                            </li>
+                            <li>
+                                <a href="/">Portfolio</a>
+                            </li>
+                            <li>
+                                <a href="/">Prices</a>
+                            </li>
+                            <li>
+                                <a href="/">Blog</a>
+                            </li>
+                            <li>
+                                <a href="/">Contact</a>
+                            </li>
+                        </ul>
+                        <button class="mobileMenu hidden">
+                            <hr>
+                            <hr>
+                            <hr>
+                        </button>
+                    </div>
+                    <div class="header__links">
+                        Links
+                    </div>
+                </div>
+
+
+            </div>
+        </header>
+
+    </div>
+
 </body>
+
 </html>
