--- a/src/index.html
+++ b/src/index.html
@@ -21,31 +21,31 @@
                     <div class="header__nav">
                         <ul>
                             <li>
-                                <a href="/">Home</a>
+                                <a href="/#">Home</a>
                             </li>
                             <li>
-                                <a href="/">About</a>
+                                <a href="/#">About</a>
                             </li>
                             <li>
-                                <a href="/">History</a>
+                                <a href="/#">History</a>
                             </li>
                             <li>
-                                <a href="/">Team</a>
+                                <a href="/#">Team</a>
                             </li>
                             <li>
-                                <a href="/">Portfolio</a>
+                                <a href="/#">Portfolio</a>
                             </li>
                             <li>
-                                <a href="/">Prices</a>
+                                <a href="/#">Prices</a>
                             </li>
                             <li>
-                                <a href="/">Blog</a>
+                                <a href="/#">Blog</a>
                             </li>
                             <li>
-                                <a href="/">Contact</a>
+                                <a href="/#">Contact</a>
                             </li>
                         </ul>
-                        <button class="mobileMenu hidden">
+                        <button class="mobileMenu">
                             <hr>
                             <hr>
                             <hr>
