--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                         <img src="assets/images/logo_header.png" alt="Logo">
                     </div>
                     <div class="header__nav">
-                        <ul>
+                        <ul id="nav" class="hidden">
                             <li>
                                 <a href="/#">Home</a>
                             </li>
@@ -45,7 +45,7 @@
                                 <a href="/#">Contact</a>
                             </li>
                         </ul>
-                        <button class="mobileMenu">
+                        <button id="topNavButton" class="mobileMenu">
                             <hr>
                             <hr>
                             <hr>
