--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                         <img src="assets/images/logo_header.png" alt="Logo">
                     </div>
                     <div class="header__nav">
-                        <ul id="nav" class="hidden">
+                        <ul id="nav">
                             <li>
                                 <a href="/#">Home</a>
                             </li>
@@ -45,9 +45,9 @@
                                 <a href="/#">Contact</a>
                             </li>
                         </ul>
-                        <button id="topNavButton" class="mobileMenu">
+                        <button id="topNavButton" class="mobileMenuClose">
                             <hr>
-                            <hr>
+                            <hr class="mide">
                             <hr>
                         </button>
                     </div>
