--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 
 <body>
 
-    <div class="slider">
-        <header> 
+    <div class="sliderBody">
+        <header>
             <div class="container">
-                <div class="header"> 
+                <div class="header">
                     <div class="header__logo">
                         <img src="assets/images/logo_header.png" alt="Logo">
                     </div>
@@ -52,13 +52,68 @@
                         </button>
                     </div>
                     <div class="header__links">
-                        Links
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="/src/assets/images/facebook_ico.png" alt="foto">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="/src/assets/images/twitter_ico.png" alt="foto">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="/src/assets/images/be_ico.png" alt="foto">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
 
             </div>
         </header>
+        <div class="container">
+            <div class="slider">
+                <div class="leftScroll"><</div>
+                <div class="sliderText">
+                    <div class="sliderText__tagline">
+                        Design Studio and Digital Agency
+                    </div>
+                    <img class="sliderText__img" src="./assets/images/line__slider.png" alt="">
+                    <div class="sliderText__title">
+                        We are Atlantida
+                    </div>
+                    <img class="sliderText__img" src="./assets/images/line__slider.png" alt="">
+                    <div>
+                        <button class="sliderText__start">
+                            <img src="./assets/images/scrollDown.png" alt="sctollDown">
+                            Get Started
+                        </button>
+                    </div>
+                </div>
+                <div class="sliderText hidden" >
+                    <div class="sliderText__tagline">
+                        Design Studio and Digital Agency
+                    </div>
+                    <img src="./assets/images/line__slider.png" alt="">
+                    <div class="sliderText__title">
+                        We are Atlantida
+                    </div>
+                    <div>
+                        <button class="sliderText__start">
+                            Get Started
+                        </button>
+                        <img src="./assets/images/scrollDown.png" alt="sctollDown">
+                    </div>
+                    
+                </div>
+                <div class="rightScroll">></div>
+
+            </div>
+        </div>
 
     </div>
 
