--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                                 <a href="/#">Home</a>
                             </li>
                             <li>
-                                <a href="/#">About</a>
+                                <a href="#aboutUs">About</a>
                             </li>
                             <li>
                                 <a href="/#">History</a>
@@ -77,45 +77,66 @@
         </header>
         <div class="container">
             <div class="slider">
-                <div class="leftScroll"><</div>
-                <div class="sliderText">
-                    <div class="sliderText__tagline">
-                        Design Studio and Digital Agency
-                    </div>
-                    <img class="sliderText__img" src="./assets/images/line__slider.png" alt="">
-                    <div class="sliderText__title">
-                        We are Atlantida
-                    </div>
-                    <img class="sliderText__img" src="./assets/images/line__slider.png" alt="">
-                    <div>
-                        <button class="sliderText__start">
-                            <img src="./assets/images/scrollDown.png" alt="sctollDown">
-                            Get Started
-                        </button>
-                    </div>
-                </div>
-                <div class="sliderText hidden" >
-                    <div class="sliderText__tagline">
-                        Design Studio and Digital Agency
-                    </div>
-                    <img src="./assets/images/line__slider.png" alt="">
-                    <div class="sliderText__title">
-                        We are Atlantida
-                    </div>
-                    <div>
-                        <button class="sliderText__start">
-                            Get Started
-                        </button>
-                        <img src="./assets/images/scrollDown.png" alt="sctollDown">
-                    </div>
-                    
-                </div>
-                <div class="rightScroll">></div>
+                <div class="leftScroll">
+                    < </div>
+                        <div class="sliderText">
+                            <div class="sliderText__tagline">
+                                Design Studio and Digital Agency
+                            </div>
+                            <img class="sliderText__img" src="./assets/images/line__slider.png" alt="">
+                            <div class="sliderText__title">
+                                We are Atlantida
+                            </div>
+                            <img class="sliderText__img" src="./assets/images/line__slider.png" alt="">
+                            <div>
+                                <button class="sliderText__start">
+                                    <img src="./assets/images/scrollDown.png" alt="sctollDown">
+                                    Get Started
+                                </button>
+                            </div>
+                        </div>
+                        <div class="sliderText hidden">
+                            <div class="sliderText__tagline">
+                                Design Studio and Digital Agency
+                            </div>
+                            <img src="./assets/images/line__slider.png" alt="">
+                            <div class="sliderText__title">
+                                We are Atlantida
+                            </div>
+                            <div>
+                                <button class="sliderText__start">
+                                    Get Started
+                                </button>
+                                <img src="./assets/images/scrollDown.png" alt="sctollDown">
+                            </div>
 
+                        </div>
+                        <div class="rightScroll">></div>
+                </div>
             </div>
         </div>
-
-    </div>
+            <main>
+                <div class="container">
+                    <div id="aboutUs">
+                        <div class="aboutUs__img">   
+                        </div>
+                        <div class="aboutUs__title">
+                            About US
+                        </div>
+                        <div class="aboutUs__line">
+                            <img class="sliderText__img" src="./assets/images/line__dark.png" alt="">
+                        </div>
+                        <div class="aboutUs__text">
+                            Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque. Maecenas est enim, sollicitudin sit amet nisi vel, mattis efficitur sapien. Nulla lobortis dui in aliquam placerat. Maecenas commodo odio nec neque imperdiet sagittis. Fusce mauris tellus, vulputate id finibus a, rutrum et justo. Vivamus at eros sed justo laoreet mattis vulputate vel magna. Sed quis pulvinar quam, et tempus purus. Fusce et nisi eget dui hendrerit iaculis. Cras volutpat augue tempor viverra tincidunt. Maecenas interdum scelerisque enim. Aenean interdum leo ac lectus gravida, id tincidunt sem finibus. Curabitur ac arcu blandit, tempus leo id, ultrices ante. 
+                        </div>
+                        <div class="aboutUs__buttons">
+                            <button>Contact Us</button>
+                            <button>Portfolio</button>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
 
 </body>
 
