--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,36 @@
                             <button>Portfolio</button>
                         </div>
                     </div>
+                    <div class="result">
+                        <div class="resultBlock">
+                            <div class="resultBlock__img">
+                                <img src="../src/assets/images/result_ico_1.png" alt="">
+                            </div>
+                            <div class="resultBlock__title">awards winner</div>
+                            <div class="resultBlock__text">54</div>
+                        </div>
+                        <div class="resultBlock">
+                            <div class="resultBlock__img">
+                                <img src="../src/assets/images/result_ico_2.png" alt="">
+                            </div>
+                            <div class="resultBlock__title">jobs done</div>
+                            <div class="resultBlock__text">1054</div>
+                        </div>
+                        <div class="resultBlock">
+                            <div class="resultBlock__img">
+                                <img src="../src/assets/images/result_ico_3.png" alt="">
+                            </div>
+                            <div class="resultBlock__title">Happy Client</div>
+                            <div class="resultBlock__text">120</div>
+                        </div>
+                        <div class="resultBlock">
+                            <div class="resultBlock__img">
+                                <img src="../src/assets/images/result_ico_4.png" alt="">
+                            </div>
+                            <div class="resultBlock__title">Reviews Recieved</div>
+                            <div class="resultBlock__text">54</div>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
