--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,53 @@
                         </div>
                     </div>
                 </div>
+                <div class="services">
+                    <div class="container">
+                        <div class="services__title">
+                            Services
+                        </div>
+                        <div class="services__line">
+                            <img src="./assets/images/line__services.png" alt="line">
+                        </div>
+                        <div class="services__tagline">
+                            Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque. 
+                        </div>
+                        <div class="services__reguets">
+                            <div class="serviceBody_1">
+                                <div class="serviceBody__title">
+                                    GRAPHIC <br> SIGN
+                                </div>
+                                <div class="serviceBody__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                </div>
+                            </div>
+                            <div class="serviceBody_2">
+                                <div class="serviceBody__title">
+                                    GRAPHIC <br> SIGN
+                                </div>
+                                <div class="serviceBody__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                </div>
+                            </div>
+                            <div class="serviceBody_3">
+                                <div class="serviceBody__title">
+                                    GRAPHIC <br> SIGN
+                                </div>
+                                <div class="serviceBody__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                </div>
+                            </div>
+                            <div class="serviceBody_4">
+                                <div class="serviceBody__title">
+                                    GRAPHIC <br> SIGN
+                                </div>
+                                <div class="serviceBody__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                </div>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
             </main>
         </div>
 
